BcgHub.UI/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcg-hub-ui
  namespace: bcg-hub
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: dev.radixal.net
      http:
        paths:
          - path: /bcg-hub
            pathType: Prefix
            backend:
              service:
                name: bcg-hub-ui
                port:
                  number: 80
